# torch-check

./: .gitignore  LICENSE  README.md  pyproject.toml
examples/: __init__.py  digits_pipeline.py  eval_v2.yaml  eval_v3.yaml  m1_demo.py  m2_demo.py  m3_demo.py  m4_demo.py  run_pipeline.py  train_checkpoints.py
examples/checkpoints/: digits_v2.pt  digits_v3.pt
src/torchcheck/: __init__.py  cli.py  comparator.py  config.py  evaluator.py  metrics.py  regression.py  result.py  store.py
src/torchcheck/metrics/: __init__.py  base.py  classification.py  regression.py
tests/: conftest.py  parity_pipeline.py  test_cli.py  test_comparator.py  test_digits_sim.py  test_evaluator.py  test_metrics.py  test_per_sample.py  test_regression.py  test_store.py
tests/sample_sims/: README.md  __init__.py  digits_cnn.py  run_digits_sim.py
