[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "torchcheck"
version = "0.1.0"
description = "Structured, reproducible, versioned evaluation for PyTorch models."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Tushaar Sood" }]
keywords = ["pytorch", "evaluation", "metrics", "regression-detection", "ml"]
dependencies = [
    "torch>=2.0",
    "numpy>=1.24",
    "pandas>=2.0",
    "pyarrow>=10.0",
    "pyyaml>=6.0",
    "typer>=0.12",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "scikit-learn>=1.2"]

[project.scripts]
torchcheck = "torchcheck.cli:app"

[project.urls]
Homepage = "https://github.com/tushaar/torchcheck"

[tool.hatch.build.targets.wheel]
packages = ["src/torchcheck"]

[tool.pytest.ini_options]
testpaths = ["tests"]
